16-quarkus-deployment/manifests/route-public.yml
apiVersion: v1
kind: Route
metadata:
  name: quarkus-example-public
  labels:
    route-type: public
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: quarkus-example
